# sequence

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
.circleci/: config.yml
.github/workflows/: ci.yml
bindings/python/: CMakeLists.txt  README.md  setup.py
bindings/python/example/: criterion_example.py
bindings/python/flashlight/lib/sequence/: __init__.py  _criterion.cpp  criterion.py  criterion_torch.py
bindings/python/test/: test_import.py
cmake/: BuildGoogleTest.cmake  Buildcub.cmake  InternalUtils.cmake  TestUtils.cmake  flashlight-sequence-config.cmake.in
flashlight/lib/sequence/: CMakeLists.txt  Defines.h
flashlight/lib/sequence/criterion/: CMakeLists.txt  Defines.h  Workspace.h
flashlight/lib/sequence/criterion/cpu/: ConnectionistTemporalClassificationCriterion.h  CriterionUtils.cpp  CriterionUtils.h  ForceAlignmentCriterion.h  FullConnectionCriterion.h  ViterbiPath.h
flashlight/lib/sequence/criterion/cuda/: CriterionUtils.cu  CriterionUtils.cuh  ForceAlignmentCriterion.cu  ForceAlignmentCriterion.cuh  FullConnectionCriterion.cu  FullConnectionCriterion.cuh  ViterbiPath.cu  ViterbiPath.cuh
